Fixed spacing for stream results message.

--- a/resources/Styles/form.scss
+++ b/resources/Styles/form.scss
@@ -178,7 +178,7 @@
         }
         p{
           width: 225px;
-          margin: 0 auto;
+          margin: 10px auto 0 auto;
           font-size: 1.1rem;
         }
         .streaming-image{
